--- a/test_u1_l1.html
+++ b/test_u1_l1.html
@@ -173,7 +173,7 @@
             </a>
             
             <div style="text-align:center; font-size:11px; color:#94a3b8; margin-top:5px;">
-                Solution unlocks tomorrow at 8 PM
+                Solution unlocks soon
             </div>
         </div>
 
