--- a/units.html
+++ b/units.html
@@ -94,14 +94,14 @@
 
     <div class="header">
         <div class="top-row">
-            <div class="back-btn" onclick="window.location.href='index.html'"><i class="fas fa-arrow-left"></i></div>
-            <div style="font-size:12px; font-weight:700; background:rgba(255,255,255,0.1); padding:6px 14px; border-radius:20px;">Part A</div>
-        </div>
-        <h1 class="page-title">Seen Syllabus</h1>
-        <div class="sub-text">BOU English 1st Paper (40 Marks)</div>
+           <a href="u3_food.html" class="unit-card" id="card_u3">
+    <div class="u-icon slate"><i class="fas fa-utensils"></i></div>
+    <div class="u-info">
+        <div class="u-title">Unit 3: Food Safety</div>
+        <div class="u-desc">Adulteration & Health</div>
     </div>
-
-    <div class="container">
+    <div class="status-icon" id="icon_u3"><i class="fas fa-chevron-right"></i></div>
+</a>
 
         <a href="u1_mandela.html" class="unit-card" id="card_u1">
             <div class="u-icon blue"><i class="fas fa-history"></i></div>
